# cpp-mqtt-subscriber

./: .env.example  CMakeLists.txt
.vscode.example/: settings.json
src/: main.cpp
src/globals/: globals.h
src/mqtt_subscriber/: mqtt_subscriber.cpp  mqtt_subscriber.h
